@startuml Diagrama de Clases - Venta
class sale{
    -id
    -saleDate
    -customer: customer
    -saleDetail: saleDetail
    -deposit
    -total 
    -appliedDiscount
    -saleStatus
    -estimatedDeliveryDate

    +createSale()
    +findSales()
    +findSalesByPagination()
    +findSalesById()
    +partialUpdateSale()
    +deleteSale()
    +changeNextStatus()
    +calculateTotalSale()
}

class saleDetail{
    -id
    -product: product
    -quantity
    -color 
    -totalDetail

    +knowProduct()
    +createSaleDetail()
    +findAllSaleDetails()
    +findSaleDetailById()
    +updateSaleDetail()
    +partialUpdateSaleDetail()
    +deleteSaleDetail()
    +calculateTotalSaleDetail()
}

class saleStatus{
    -id 
    -value 

    +createSaleState()
    +findAllSaleStates()
    +findSaleStateById()
    +findSaleStateByName()
    +updateSaleState()
    +deleteSaleState()
    +getNextSaleStatus()
}

class product{
    -id
    -productType: productType
    -name 
    -description
    -price
    -stock
    -isActive

    +
}

class productType{
    -id
    -name
    -description
}

class customer{
    -id
    -firstName 
    -lastName
    -phone 
    -email
    -registrationDate
}

sale o-> "1..*" saleDetail
saleDetail --> "1" product
product -> "1" productType
sale --> "1" saleStatus
customer "1" <- sale

@enduml